# qmoney

./: .gitignore  README.md  pyproject.toml  qmoney_mps_quorum_demo.py
docs/architecture/: classical-simulation-hardware-breakdown.md  private-key-quorum-threat-model.md  public-key-agent-implementation-contract.md  public-key-implementation-workflow.md  public-vs-private-key-qmoney.md  qmoney-agentic-cli.md  qmoney-pkey-polarizer-experiment.md  software-mps-quorum-design.md
docs/diagrams/: qmoney-architecture.html  qmoney-oracle-flow.html
docs/polarizer/: README.md  polarizer-demo-evaluation.md  polarizer-demo-exhibit-script.md  polarizer-demo-script-variants.md
docs/research/: aaronson-private-key-quantum-money-and-qmoney.md  ekert-quantum-cryptography-and-qmoney.md  hidden-subspace-notes.md  latest-quantum-money-literature-and-qmoney.md  note-family-evaluation-checklist.md  polarizer-demo-evaluation.md  quantum-money-literature-roadmap.md  shor-arguments-and-qmoney-integration.md  (+1 more)
pkey_quorum/: README.md  __init__.py  demo.py
pubkey_hidden_subspace/: README.md  __init__.py  note_family.py  oracles.py  verifier.py
qmoney_cli/: __init__.py  app.py  helptext.py  output.py  parsers.py
tests/: test_oracle_invariants_z3.py  test_pkey_quorum.py  test_pubkey_hidden_subspace.py  test_qmoney.py  test_qmoney_cli_help.py  test_qmoney_cli_pkey.py  test_qmoney_cli_pubkey.py
tla/: README.md  hidden_subspace_money.cfg  hidden_subspace_money.tla
website/: README.md  index.html  package-lock.json  package.json
z3/: README.md  check_oracle_invariants.py
(+8 files in other folders)
