[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qmoney"
version = "0.1.0"
description = "Agent-oriented CLI for QMoney research simulators"
requires-python = ">=3.10"

[project.scripts]
qmoney = "qmoney_cli.app:main"

[tool.setuptools]
packages = ["qmoney_cli", "qmoney_cli.commands", "pkey_quorum", "pubkey_hidden_subspace"]
